--- a/src/ITVisions.Blazor/Controls/ProgressBlack.razor.css
+++ b/src/ITVisions.Blazor/Controls/ProgressBlack.razor.css
@@ -1,7 +1,8 @@
-﻿
+﻿/*Ladeanimation. Quelle: http://tobiasahlin.com/spinkit*/ 
+
 .spinnerBox {
  /* margin: 100px auto;*/
- width: 50px;
+width: 50px;
  height: 40px;
  text-align: center;
  font-size: 10px;
