Verbesserung LogMail bei Survey Run Log-Farbe auf Darkorgange

--- a/src/ITVisions.Blazor/Controls/Debug.razor
+++ b/src/ITVisions.Blazor/Controls/Debug.razor
@@ -1,11 +1,11 @@
 ﻿<style>
  .debug {
-  color: orange;
+  color: darkorange;
   background-color: beige 
  }
 
 .debug a {
-  color: orange !important;
+  color: darkorange !important;
   background-color: beige !important;
   text-decoration-line: underline;
  }
