--- a/src/ITVisions.Blazor/Controls/Upload.razor
+++ b/src/ITVisions.Blazor/Controls/Upload.razor
@@ -49,7 +49,7 @@
    {
     <div class="form-group">
      Kommentar zu @(this.filesToUpload.Count == 1 ? "dieser Datei" : " diesen " + this.filesToUpload.Count + " Dateien") <span class="ZusatzInfoSmall">optional, max 200 Zeichen</span>
-     <input type="text" @bind="comment" class="form-control" maxlength="200">
+     <textarea @bind="comment" class="form-control" maxlength="@MaxCommentLength" rows="@(MaxCommentLength<200 ? 1 : 2)"></textarea>
 
     </div>
    }
