--- a/src/SamplesRCL/Debugging/Fehler.razor
+++ b/src/SamplesRCL/Debugging/Fehler.razor
@@ -30,8 +30,7 @@
 
  async Task KlickDebugger()
  {
-  await Logik();
-  System.Diagnostics.Debugger.Break();
+  await Logik(0);
  }
 
  [System.Diagnostics.DebuggerHidden()]
@@ -40,8 +39,7 @@
   await Logik();
  }
 
-
- async Task Logik()
+ async Task Logik(int id = 123)
  {
   count++;
   Log($"{count}");
@@ -51,7 +49,8 @@
   ZeitenDic.Add(count, now);
   Log($"{count}: {now}");
 
-  var p = new Person() { ID = 123, Name = "Holger Schwichtenberg" };
+  if (id <= 0) System.Diagnostics.Debugger.Break();
+  var p = new Person() { ID = id, Name = "Holger Schwichtenberg" };
   util.Log(p.ToString());
  }
 
