--- a/src/SamplesRCL/Komponenteneinbettung/Komponentenhost_ReferenceType/CounterPanel.razor
+++ b/src/SamplesRCL/Komponenteneinbettung/Komponentenhost_ReferenceType/CounterPanel.razor
@@ -1,5 +1,4 @@
-﻿
-<div class="panel panel-default gruen">
+﻿<div class="panel panel-default gruen">
  <div class="panel-heading gruen">
   <h4>Komponente "Counter Panel"</h4>
  </div>
