--- a/src/SamplesRCL/Komponenteneinbettung/VorlagenbasierteKomponenten/FlexExpander.razor
+++ b/src/SamplesRCL/Komponenteneinbettung/VorlagenbasierteKomponenten/FlexExpander.razor
@@ -1,7 +1,4 @@
-﻿
-
-
- <div class="panel panel-default">
+﻿ <div class="panel panel-default">
   <div class="panel-heading" @onclick="@Toggle">
    @if (Collapsed)
    {
