CC und BBC beim Mailversand

--- a/src/MiracleList_Backend/Pages/ClientIDConfirmation.cshtml
+++ b/src/MiracleList_Backend/Pages/ClientIDConfirmation.cshtml
@@ -12,7 +12,7 @@
 
 <div>
 
- <p>Danke, <span fett>@Model.ClientIDModelResult.Name</span><text>.</text> Der Server hat Ihre personalisierte Client-ID gesendet an <span fett>@Model.ClientIDModelResult.EMail</span>.<br />Bitte beachten Sie, dass eine Client-ID jederzeit widerrufen werden kann, falls Sie diese missbrauchen!</p>
+ <p>Danke, <span fett>@Model.ClientIDModelResult.Name</span><text>.</text></p> <p>Der Server hat Ihre personalisierte Client-ID gesendet an <span fett>@Model.ClientIDModelResult.EMail</span>.</p> <p>Bitte beachten Sie, dass eine Client-ID jederzeit widerrufen werden kann, falls Sie diese missbrauchen!</p>
 
  @*The client ID is displayed here only in the environments development and test.*@
  <environment names="development, test">
