Fix: Fehlender SignalR-Nachricht

--- a/src/MLBlazorRCL/MainView/Main.razor
+++ b/src/MLBlazorRCL/MainView/Main.razor
@@ -95,7 +95,7 @@
        <TaskElement Task="t" @key="t"
                     Active="(t.TaskID == this.task?.TaskID)"
                     TaskChecked="async ()=>await this.SendTaskListUpdate()"
-                    TaskRemoved="ReloadTaskList"
+                    TaskRemoved="async ()=> { await this.SendTaskListUpdate(); await ReloadTaskList(); } "
                     TaskClicked="(t)=>ShowTaskDetail(t)"
                     TaskDragged="(t)=>DragTask(null,t)">
        </TaskElement>
