--- a/src/MiracleList_BS/App.razor
+++ b/src/MiracleList_BS/App.razor
@@ -20,7 +20,7 @@
  <base href="/" />
 
  <!--Bootstrap -->
- <link rel="stylesheet" href="/_content/ITVisions.Blazor/css/bootstrap/bootstrap.min.css" />
+ <link rel="stylesheet" href="@Assets["/_content/ITVisions.Blazor/css/bootstrap/bootstrap.min.css"]" />
  <script src="/_content/ITVisions.Blazor/js/jquery.min.js"></script>
  <script src="/_content/ITVisions.Blazor/js/bootstrap.min.js" defer></script>
 
