--- a/src/MiracleList_BS/Pages/About.razor
+++ b/src/MiracleList_BS/Pages/About.razor
@@ -15,6 +15,7 @@
   <h2>Technische Daten</h2>
   @*Dies ist ein Steuerelement aus ITVisions.Blazor*@
   <SystemInfo></SystemInfo>
+  @* Oder kurz: <SystemInfo/> *@
 
   <b> WebServer-Typ:</b> @server.ToString()
   <br>
