--- a/src/MiracleList_BU/Components/App.razor
+++ b/src/MiracleList_BU/Components/App.razor
@@ -15,32 +15,34 @@
  <base href="/" />
 
  <!--Bootstrap -->
- <link rel="stylesheet" href="/_content/ITVisions.Blazor/css/bootstrap/bootstrap.min.css" />
- <script src="/_content/ITVisions.Blazor/js/jquery.min.js"></script>
- <script src="/_content/ITVisions.Blazor/js/bootstrap.min.js" defer></script>
+ <link rel="stylesheet" href="@Assets["/_content/ITVisions.Blazor/css/bootstrap/bootstrap.min.css"]" />
+ <script src="@Assets["/_content/ITVisions.Blazor/js/jquery.min.js"]"></script>
+ <script src="@Assets[" /_content/ITVisions.Blazor/js/bootstrap.min.js"]" defer></script>
 
  <!-- Bundle aller CSS-Dateien, die Razor Components zugeordnet sind-->
- <link href="MiracleList_BU.styles.css" rel="stylesheet" />
+ <link rel="stylesheet" href="@Assets["MiracleList_BS.styles.css"]" />
 
  <!-- Eigenständige CSS-Dateien und ICO-Dateien aus wwwRoot -->
  <link rel="icon" type="image/vnd.microsoft.icon" href="/_content/MLBlazorRCL/favicon.ico">
- <link rel="stylesheet" href="/_content/MLBlazorRCL/styles.css" />
- <link rel="stylesheet" href="/_content/ITVisions.Blazor/css/itvstyles.css" />
+ <link rel="stylesheet" href="@Assets["/_content/MLBlazorRCL/styles.css"]" />
+ <link rel="stylesheet" href="@Assets["/_content/ITVisions.Blazor/css/itvstyles.css"]" />
 
  <!-- -------- Für Radzen Components -->
- <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
- <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+ <link rel="stylesheet" href="@Assets["/_content/Radzen.Blazor/css/default-base.css"]">
+ <script src="@Assets["/_content/Radzen.Blazor/Radzen.Blazor.js"]"></script>
 
  <!-- -------- Für BlazorContextMenu https://github.com/stavroskasidis/BlazorContextMenu -->
- <link rel="stylesheet" href="/_content/Blazor.ContextMenu/blazorContextMenu.min.css" />
- <script src="/_content/Blazor.ContextMenu/blazorContextMenu.min.js"></script>
+ <link rel="stylesheet" href="@Assets["/_content/Blazor.ContextMenu/blazorContextMenu.min.css"]" />
+ <script src="@Assets["/_content/Blazor.ContextMenu/blazorContextMenu.min.js"]" ></script>
 
  <!-- -------- Für BlazorUtil -->
- <script src="/_content/ITVisions.Blazor/BlazorUtil.js"></script>
+ <script src="@Assets["/_content/ITVisions.Blazor/BlazorUtil.js"]"></script>
 
  <!-- -------- Für CHARTIST.JS -->
  <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
  <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+
+ <ImportMap />
 
  <HeadOutlet />
 </head>
@@ -49,6 +51,8 @@
  <div class="container-fluid">
   <Routes @rendermode="@RenderMode.InteractiveAuto" />
  </div>
+
+  <!-- -------- Allgemeine JS-Lib von Microsoft für Blazor -->
  <script src="_framework/blazor.web.js"></script>
 </body>
 </html>
