--- a/src/MiracleList_BS/App.razor
+++ b/src/MiracleList_BS/App.razor
@@ -49,12 +49,12 @@
 
  <ImportMap />
  <HeadOutlet @rendermode="InteractiveServer" />
- @* oder ohne Pre-Rendering:<HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender: false)" /> *@
+ @* oder ohne Prerendering:<HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender: false)" /> *@
 </head>
 
 <body>
  <Routes @rendermode="InteractiveServer" />
- @* oder ohne Pre-Rendering:  <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" /> *@
+ @* oder ohne Prerendering:  <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" /> *@
 
  <!-- -------- Allgemeine JS-Lib von Microsoft für Blazor -->
  <script src="_framework/blazor.web.js"></script>
