--- a/src/MiracleList_BU.Client/Components/Routes.razor
+++ b/src/MiracleList_BU.Client/Components/Routes.razor
@@ -6,13 +6,17 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Services
 @inject LazyAssemblyLoader LazyAssemblyLoader
 
-
 <Router AppAssembly="@typeof(_Imports).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly, typeof(MLBlazorRCL.Login.Login).Assembly, typeof(Samples.SamplesList).Assembly }">
 
  <Navigating>
-  <div>
-   <p>Loading the requested page...</p>
+  <div class="spinner">
+   <div class="rect1"></div>
+   <div class="rect2"></div>
+   <div class="rect3"></div>
+   <div class="rect4"></div>
+   <div class="rect5"></div>
   </div>
+  <h2 style="text-align:center">Loading...</h2>
  </Navigating>
 
  <Found Context="routeData">
@@ -33,24 +37,22 @@
     @{
      NavigationManager.NavigateTo("/");
     }
-    @*oder: Sie sind nicht angemeldet und können den Inhalt dieser Seite daher nicht sehen. Bitte melden Sie sich an in der <a href="/Login">Anmeldemaske</a>*@
    </NotAuthorized>
 
-   </AuthorizeRouteView>
+  </AuthorizeRouteView>
   <FocusOnNavigate RouteData="@routeData" Selector="h1" />
 
  </Found>
 
-   <NotFound>
-   <PageTitle>Not found</PageTitle>
-   <h1>Sorry, Page not found :-(</h1>
-  </NotFound>
+ <NotFound>
+  <PageTitle>Not found</PageTitle>
+  <h1>Sorry, Page not found :-(</h1>
+ </NotFound>
 
 </Router>
 
-
 @code {
-// --------------- Für Lazy Loading
+ // --------------- Für Lazy Loading
  private List<Assembly> lazyLoadedAssemblies =
     new List<Assembly>();
 
