--- a/src/MLBlazorRCL/MainView/TaskEdit.razor
+++ b/src/MLBlazorRCL/MainView/TaskEdit.razor
@@ -11,7 +11,11 @@
 
  <div style="padding: 0">
   <div>
-   <h4>Task</h4>
+
+   <div style="margin-top:5px;margin-bottom:7px" class="form-inline">
+    <span class="columnHeadline">Bearbeiten der Aufgabe #@Task.TaskID</span>
+   </div>
+
 
    <NavigationLock ConfirmExternalNavigation="@true"
                    OnBeforeInternalNavigation="OnBeforeInternalNavigation" />
@@ -20,11 +24,13 @@
     @*<DataAnnotationsValidator />*@
     <FluentValidationValidator />
     <!--Schaltflächen-->
-    <button id="save" type="button" title="Änderungen speichern"
-    @onclick="Save" class="btn btn-success" disabled="@(!editContext.Validate())">
-     <span class="glyphicon glyphicon-floppy-save"></span> <span class="hidden-xs" i18n>Speichern</span>
-    </button>
-    <button id="cancel" type="button" title="Änderungen verwerfen" @onclick="Cancel" class="btn btn-warning"><span class="glyphicon glyphicon-remove"></span> <span class="hidden-xs" i18n>Abbrechen</span></button>
+    <div style="margin-bottom:7px">
+     <button id="save" type="button" title="Änderungen an Aufgabe #@Task.TaskID speichern"
+             @onclick="Save" class="btn btn-success" disabled="@(!editContext.Validate())">
+      <span class="glyphicon glyphicon-floppy-save"></span> <span class="hidden-xs" i18n>Speichern</span>
+     </button>
+     <button id="cancel" type="button" title="Änderungen an Aufgabe #@Task.TaskID verwerfen" @onclick="Cancel" class="btn btn-warning"><span class="glyphicon glyphicon-remove"></span> <span class="hidden-xs" i18n>Abbrechen</span></button>
+    </div>
     <!--Validierungsausgabe-->
     @if (!editContext.Validate())
     {
