--- a/src/MLBlazorRCL/MainView/TaskEdit.razor
+++ b/src/MLBlazorRCL/MainView/TaskEdit.razor
@@ -12,9 +12,9 @@
  <div style="padding: 0">
   <div>
 
-   <div style="margin-top:5px;margin-bottom:7px" class="form-inline">
-    <span class="columnHeadline">Bearbeiten der Aufgabe #@Task.TaskID</span>
-   </div>
+
+    <div class="columnHeadline">Bearbeiten der Aufgabe #@Task.TaskID</div>
+
 
 
    <NavigationLock ConfirmExternalNavigation="@true"
