--- a/src/ITVisions.Blazor/Controls/Card.razor
+++ b/src/ITVisions.Blazor/Controls/Card.razor
@@ -1,4 +1,4 @@
-﻿
+﻿﻿
 <div class='card @((Fill? "h-100" : ""))' @attributes="AdditionalAttributes">
  <div class="card-header" @onclick="()=>OnHeaderClick.InvokeAsync()">
   @Header
@@ -24,6 +24,12 @@
  public RenderFragment Title { get; set; }
 
  [Parameter]
- public RenderFragment? Text { get; set; }
+ public RenderFragment Text { get; set; }
+
+ /// <summary>
+ /// Weitergabe sonstiger Attribute, z.B. class und style
+ /// </summary>
+ [Parameter(CaptureUnmatchedValues = true)]
+ public IDictionary<string, object> AdditionalAttributes { get; set; }
 
 }
