Aktivierung Roslyn C# Tokenizer Test Raw Literal String

--- a/src/MiracleList_BS/Samples_BS/HelloWorldBeispiele/Vorlage.razor
+++ b/src/MiracleList_BS/Samples_BS/HelloWorldBeispiele/Vorlage.razor
@@ -11,5 +11,13 @@ Sum: @Sum
 
 @code
 {
+
+ void Test()
+ {
+  string x = "Hallo";
+ }
+ // var string = """
+ // Dies ist ein "Test" für einen Raw Literal String
+ // """;
  // Hier wäre auch noch Code möglich, wenn man unbedingt will ;-)
 }
