--- a/src/ITVisions.Blazor/Controls/Upload.razor
+++ b/src/ITVisions.Blazor/Controls/Upload.razor
@@ -39,7 +39,7 @@
    {
     var zugross = f.Size > MaxFileSize;
 
-    <li style='color:@(zugross ? "red" : "green")'>Datei @f.Name: @(!zugross ? FileUtil.GetMB(f.Size) : " zu groß! Maximium ist " + FileUtil.GetMB(MaxFileSize)) </li>
+       <li style='color:@(zugross ? "red" : "black")'>Datei @f.Name (@FileUtil.GetMB(f.Size)) @(!zugross ? "ist bereit zum Hochladen." : "zu groß!Maximium ist " + FileUtil.GetMB(MaxFileSize) + ".")</li>
    }
   </ol>
 
@@ -62,7 +62,10 @@
     </div>
    }
 
-   <ITVButton class="btn btn-primary">@(this.filesToUpload.Count == 1 ? "Datei nun hochladen" : this.filesToUpload.Count + " Dateien nun hochladen")</ITVButton>
+   if (this.filesToUpload != null && this.filesToUpload.Count > 0)
+   {
+    <ITVButton class="btn btn-primary">@(TextGenerator.TextGen.SingularPlural(this.filesToUpload.Count, "Datei", this.filesToUpload.Count + " Dateien nun hochladen"))</ITVButton >
+   }
   }
  }
 
