.NET 10.0 Feature: Fingerprinting für Blazors JavaScript-Datei

--- a/src/MiracleList_BS/App.razor
+++ b/src/MiracleList_BS/App.razor
@@ -48,6 +48,6 @@
  @* oder ohne Prerendering:  <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" /> *@
 
  <!-- -------- Allgemeine JS-Lib von Microsoft für Blazor -->
- <script src="_framework/blazor.web.js"></script>
+ <script src="@Assets["_framework/blazor.web.js"]"></script>
 </body>
 </html>
