--- a/src/MiracleList_BS/Routes.razor
+++ b/src/MiracleList_BS/Routes.razor
@@ -1,6 +1,9 @@
 ﻿@inject NavigationManager NavigationManager
 
-<Router AppAssembly="@typeof(_Imports).Assembly" AdditionalAssemblies="new[] { typeof(MLBlazorRCL.Login.Login).Assembly, typeof(Samples.SamplesList).Assembly }">
+<Router 
+ AppAssembly="@typeof(_Imports).Assembly" 
+ AdditionalAssemblies="new[] { typeof(MLBlazorRCL.Login.Login).Assembly, typeof(Samples.SamplesList).Assembly }"
+ NotFoundPage="typeof(MLBlazorRCL.NotFound)">
 
  <Navigating>
   <div class="spinner">
@@ -38,9 +41,9 @@
 
  </Found>
 
- <NotFound>
+@* Vor .NET 10.0: <NotFound>
   <PageTitle>Not found</PageTitle>
   <h1>Sorry, Page not found :-(</h1>
  </NotFound>
-
+ *@
 </Router>
