Neues .NET 10.0 Feature: Anpassung der Verbindungsproblemdialoge bei Blazor Server

--- a/src/MiracleList_BS/App.razor
+++ b/src/MiracleList_BS/App.razor
@@ -46,7 +46,7 @@
 <body>
  <Routes @rendermode="InteractiveServer" />
  @* oder ohne Prerendering:  <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" /> *@
-
+ <ReconnectModal /> @* Neu in .NET 10.0 *@ 
  <!-- -------- Allgemeine JS-Lib von Microsoft für Blazor -->
  <script src="@Assets["_framework/blazor.web.js"]"></script>
 </body>
