--- a/src/MLBlazorRCL/Login/Login.razor
+++ b/src/MLBlazorRCL/Login/Login.razor
@@ -57,7 +57,7 @@
 
 <div>
  <text>MiracleList v</text>@System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString()
- läuft mit <span title="Interacive: @this.RendererInfo.IsInteractive AssignedRenderMode: @this.AssignedRenderMode?.GetType()?.Name"> Blazor @this.RendererInfo.Name</span> @@ @System.Environment.MachineName / @RuntimeInformation.ProcessArchitecture
+ läuft mit <span title="Interacive: @this.RendererInfo.IsInteractive AssignedRenderMode: @this.AssignedRenderMode?.GetType()?.Name"> Blazor @this.RendererInfo.Name auf </span><span>@System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription</span> @@ @System.Environment.MachineName / @RuntimeInformation.ProcessArchitecture
 </div>
 
 <a href="/About/AboutMiracleList">Weitere Informationen über MiracleList</a> | <a href="/about">Mehr Systeminformationen</a>
