Neuere API verwenden

--- a/src/SamplesRCL/SamplesList.razor
+++ b/src/SamplesRCL/SamplesList.razor
@@ -15,7 +15,7 @@
  Diese Liste, sortiert nach Buchkapiteln, umfasst die Beispiele, die sich bewusst nicht die Geschäftslogik von MiracleList nutzen, weil sie fachlich nicht zu MiracleList passen oder weil didaktisch besser ist, ein Feature oder Verhalten isoliert darzustellen.
 </p>
 
-<p>Aktueller Rendering-Modus: <b>@Util.BlazorType</b></p>
+<p>Aktueller Rendering-Modus: <b>@this.RendererInfo.Name</b></p>
 
 <div class="row">
  <div class="col-xs-6">
