--- a/src/MiracleList_BS/ReconnectModal.razor
+++ b/src/MiracleList_BS/ReconnectModal.razor
@@ -11,7 +11,7 @@
   </div>
   <p class="components-reconnect-first-attempt-visible">
    @* Rejoining the server... *@
-   Blazor Server hat derzeit keinen Kontakt zum Webserver. Es wird versucht, die Verbindung wiederherzustellen... 
+   Der Webbrowser hat derzeit leider keinen Kontakt zum Webserver. Es wird versucht, die Verbindung wiederherzustellen... 
   </p>
   <p class="components-reconnect-repeated-attempt-visible">
    @* Rejoin failed... trying again in <span id="components-seconds-to-next-attempt"></span> seconds. *@
@@ -22,7 +22,6 @@
    @* Failed to rejoin.<br />Please retry or reload the page. *@
    Blazor Server den Kontakt zum Webserver nicht wiederherstellen können.
   </p>
-
   <button id="components-reconnect-button">
    Erneut verbinden
   </button>
