--- a/src/MiracleList_BU/App.razor
+++ b/src/MiracleList_BU/App.razor
@@ -46,16 +46,27 @@
  <ImportMap />
 
  <HeadOutlet @rendermode="@RenderMode.InteractiveAuto"/>
- @* oder ohne Prerendering:<HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender: false)" /> *@
 </head>
 
 <body>
  <div class="container-fluid">
   <Routes @rendermode="@RenderMode.InteractiveAuto" />
-  @* oder ohne Prerendering:  <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" /> *@
  </div>
 
   <!-- -------- Allgemeine JS-Lib von Microsoft für Blazor -->
  <script src="_framework/blazor.web.js"></script>
 </body>
 </html>
+
+@* 
+Render-Modus einstellen bei <HeadOutlet> und <Routes>
+----------------------------------------------------
+@rendermode="InteractiveServer": Static -> Server
+@rendermode="InteractiveWebAssembly": Static -> WebAssembly
+@rendermode="InteractiveAuto": Static -> Server -> WebAssembly
+
+Prerendering abschalten:
+@rendermode="new InteractiveServerRenderMode(prerender: false)"
+@rendermode="new InteractiveServerRenderMode(prerender: false)"
+@rendermode="new InteractiveAutoRenderMode(prerender: false)"
+*@
