--- a/src/SamplesRCL/DI/DIDemo.razor
+++ b/src/SamplesRCL/DI/DIDemo.razor
@@ -53,7 +53,7 @@
 
   Ausgabe += "<h3>HttpContext</h3>";
 
-  HttpContext httpContext = null;
+  Microsoft.AspNetCore.Http.HttpContext httpContext = null;
 
   try
   {
