--- a/src/MLBlazorRCL/MainView/TaskEdit.razor
+++ b/src/MLBlazorRCL/MainView/TaskEdit.razor
@@ -12,7 +12,7 @@
  <div style="padding: 0">
   <div>
 
-    <div class="columnHeadline">Bearbeiten der Aufgabe #@Task.TaskID</div>
+   <div class="columnHeadline">Bearbeiten der <i>Aufgabe #@Task.TaskID</i></div>
 
    <NavigationLock ConfirmExternalNavigation="@true"
                    OnBeforeInternalNavigation="OnBeforeInternalNavigation" />
