--- a/src/MiracleList_BS/App.razor
+++ b/src/MiracleList_BS/App.razor
@@ -60,7 +60,7 @@
      builder.withServerTimeout(40000).withKeepAliveInterval(5000); // Standard ist 30s/15s
     }
    }
-  }); *@
- </script>
+  });
+  </script> *@
 </body>
 </html>
