--- a/src/MLBlazorRCL/Login/Login.razor
+++ b/src/MLBlazorRCL/Login/Login.razor
@@ -5,59 +5,63 @@
 @inherits LoginModel
 
 <div class="panel panel-primary">
- <div class="panel-heading">
-  <h2 class="Headline">Benutzeranmeldung</h2>
- </div>
- <div class="panel-body">
-  <p>
-   <a href="/about">MiracleList</a> ist eine praxisnahe Beispielanwendung für eine Single-Page-Webapplication (SPA) zur Aufgabenverwaltung aus dem <a href="https://www.IT-Visions.de/BlazorBuch" target="_blank">Blazor-Buch von Dr. Holger Schwichtenberg</a>. Diese Variante des Frontends läuft mit <span title="Interacive: @this.RendererInfo.IsInteractive AssignedRenderMode: @this.AssignedRenderMode?.GetType()?.Name"> Blazor @this.RendererInfo.Name</span> auf @System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription. <span class="glyphicon glyphicon-arrow-right"></span> <a href="/About/AboutMiracleList">Weitere Informationen</a>
-  </p>
-  <p>
-   Zur Benutzeranmeldung geben Sie die Kombination aus Ihrer E-Mail-Adresse und einem beliebigen Kennwort ein. Wenn es für diese E-Mail-Adresse noch kein Benutzerkonto gibt, wird automatisch ein neues Benutzerkonto mit einigen Beispielaufgaben angelegt. Merken Sie sich das Kennwort für zukünftige Anmeldungen. Das Kennwort kann nicht geändert werden. Das Benutzeranmeldeverfahren ist bewusst vereinfacht, um die Hürde zum Einstieg in die Anwendung gering zu halten.
-  </p>
-  <br>
-  <div class="row">
-   <div class="col-xs-12 form-group">
-    <label for="name">E-Mail-Adresse:</label>
-    <input name="username" @bind="this.Username" id="username" type="text" placeholder="Ihre E-Mail-Adresse" required class="form-control" disabled="@(!this.RendererInfo.IsInteractive)">
-   </div>
-  </div>
-
-  <div class="row">
-   <div class="col-xs-12 form-group">
-    <label for="password">Kennwort</label>
-    <input name="password" @bind="this.Password" id="password" placeholder="Ihr Kennwort" required type="password" class="form-control" disabled="@(!this.RendererInfo.IsInteractive)">
-   </div>
-  </div>
-
-  <div class="row">
-   <div class="col-xs-12 form-group">
-    <label for="password">Server</label>
-    <select @bind="this.Backend" id="backend" class="form-control">
-     @foreach (var cs in AppState.GetBackendSet())
-     {
-      <option value="@cs.Key">@cs.Key</option>
-     }
-    </select>
-    <div style="margin-top: 10px">
-     <ServerState></ServerState>
+    <div class="panel-heading">
+        <h2 class="Headline">Benutzeranmeldung</h2>
     </div>
-   </div>
-  </div>
+    <div class="panel-body">
+        <p>
+            <a href="/about">MiracleList</a> ist eine praxisnahe Beispielanwendung für eine Single-Page-Webapplication (SPA) zur Aufgabenverwaltung aus dem <a href="https://www.IT-Visions.de/BlazorBuch" target="_blank">Blazor-Buch von Dr. Holger Schwichtenberg</a>. Diese Variante des Frontends läuft mit <span title="Interacive: @this.RendererInfo.IsInteractive AssignedRenderMode: @this.AssignedRenderMode?.GetType()?.Name"> Blazor @this.RendererInfo.Name</span> auf @System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription. <span class="glyphicon glyphicon-arrow-right"></span> <a href="/About/AboutMiracleList">Weitere Informationen</a>
+        </p>
+        <p>
+            Zur Benutzeranmeldung geben Sie die Kombination aus Ihrer E-Mail-Adresse und einem beliebigen Kennwort ein. Wenn es für diese E-Mail-Adresse noch kein Benutzerkonto gibt, wird automatisch ein neues Benutzerkonto mit einigen Beispielaufgaben angelegt. Merken Sie sich das Kennwort für zukünftige Anmeldungen. Das Kennwort kann nicht geändert werden. Das Benutzeranmeldeverfahren ist bewusst vereinfacht, um die Hürde zum Einstieg in die Anwendung gering zu halten.
+        </p>
+        <br>
+        @if (!this.RendererInfo.IsInteractive)
+        {
+            <ITVisions.Blazor.Controls.ProgressColorful></ITVisions.Blazor.Controls.ProgressColorful>
+        }
+        <div class="row">
+            <div class="col-xs-12 form-group">
+                <label for="name">E-Mail-Adresse:</label>
+                <input name="username" @bind="this.Username" id="username" type="text" placeholder="Ihre E-Mail-Adresse" required class="form-control" disabled="@(!this.RendererInfo.IsInteractive)">
+            </div>
+        </div>
 
-  <button @onclick="Login" class="btn @(this.RendererInfo.IsInteractive ? "btn-primary" : "btn-danger")" disabled="@(!this.RendererInfo.IsInteractive)" type="submit" id="login" name="login">Anmelden</button>
+        <div class="row">
+            <div class="col-xs-12 form-group">
+                <label for="password">Kennwort</label>
+                <input name="password" @bind="this.Password" id="password" placeholder="Ihr Kennwort" required type="password" class="form-control" disabled="@(!this.RendererInfo.IsInteractive)">
+            </div>
+        </div>
 
-  <span id="errorMsg" class="text-danger">@LoginStatus</span>
- </div>
+        <div class="row">
+            <div class="col-xs-12 form-group">
+                <label for="password">Server</label>
+                <select @bind="this.Backend" id="backend" class="form-control">
+                    @foreach (var cs in AppState.GetBackendSet())
+                    {
+                        <option value="@cs.Key">@cs.Key</option>
+                    }
+                </select>
+                <div style="margin-top: 10px">
+                    <ServerState></ServerState>
+                </div>
+            </div>
+        </div>
+
+        <button @onclick="Login" class="btn @(this.RendererInfo.IsInteractive ? "btn-primary" : "btn-danger")" disabled="@(!this.RendererInfo.IsInteractive)" type="submit" id="login" name="login">Anmelden</button>
+
+        <span id="errorMsg" class="text-danger">@LoginStatus</span>
+    </div>
 </div>
 
 <a href="https://www.IT-Visions.de" title="Link zu Homepage der Firma www.IT-Visions.de">
- <img align="right" width="200" src="/_content/MLBlazorRCL/img/www.IT-Visions.de_Logo.jpg" alt="Logo www.IT-Visions.de" />
+    <img align="right" width="200" src="/_content/MLBlazorRCL/img/www.IT-Visions.de_Logo.jpg" alt="Logo www.IT-Visions.de" />
 </a>
 
 <div>
- <text>MiracleList v</text>@System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString()
- läuft mit <span title="Interacive: @this.RendererInfo.IsInteractive AssignedRenderMode: @this.AssignedRenderMode?.GetType()?.Name"> Blazor @this.RendererInfo.Name auf </span><span>@System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription</span> @@ @System.Environment.MachineName / @RuntimeInformation.ProcessArchitecture
+    <text>MiracleList v</text>@System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString()
+    läuft mit <span title="Interacive: @this.RendererInfo.IsInteractive AssignedRenderMode: @this.AssignedRenderMode?.GetType()?.Name"> Blazor @this.RendererInfo.Name auf </span><span>@System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription</span> @@ @System.Environment.MachineName / @RuntimeInformation.ProcessArchitecture
 </div>
 
 <a href="/About/AboutMiracleList">Weitere Informationen über MiracleList</a> | <a href="/about">Mehr Systeminformationen</a>
